language/move-lang/tests/move_check/expansion/use_struct_unbound.exp
error: 

   ┌── tests/move_check/expansion/use_struct_unbound.move:6:17 ───
   │
 6 │     use 0x1::X::S;
   │                 ^ Invalid 'use'. Unbound member 'S' in module '0x1::X'
   ·
 2 │ module X {
   │        - Module '0x1::X' declared here
   │

error: 

   ┌── tests/move_check/expansion/use_struct_unbound.move:8:19 ───
   │
 8 │     struct X { f: S }
   │                   ^ Unbound type 'S' in current scope
   │

